# cavi

./: Makefile  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/_cavi/: cavimodule.cc
src/_cavi-stubs/: __init__.pyi
src/_cavi/include/: mock_status.hh  py_methods.hh
src/_cavi/src/: mock_status.cc  py_getdata.cc  py_getstatus.cc  py_setstatus.cc
src/cavi/: __init__.py  __main__.py  _app.py
src/cavi-stubs/: __init__.pyi
src/cavi-stubs/_cavi/: __init__.pyi
src/cavi-stubs/_cavi/_testing/: __init__.pyi
src/cavi-stubs/_cavi/data/: __init__.pyi
src/cavi-stubs/_cavi/status/: __init__.pyi
tests/: test_data_getters.py  test_imports.py  test_status_getters.py  test_status_setters.py
