[metadata]
name = cavi
version = 0.0.1
author = Matt Drozt
author_email = matthew.drozt@gmail.com
description = Purdue Orbital package to manage launch station opperations
long_description = TODO
platforms = unix, linux
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10


[options]
package_dir =
  =src
packages = find:
python_requires = >=3.7
install_requires =
  orbitalcoms @ git+https://github.com/purdue-orbital/orbitalcoms#egg=orbitalcoms


[options.extras_require]
dev = 
  black>=21.12b0
  flake8>=4.0.1
  isort>=5.10.1
  mypy>=0.910


[options.packages.find]
where = src
exclude =
  .mypy_cache


[flake8]
max-line-length = 160
